--- a/Config/trailers.example.conf
+++ b/Config/trailers.example.conf
@@ -1,6 +1,6 @@
 [main]
 # Go to https://www.themoviedb.org, sign up for an account and get an api key
-TMDB_API_Key = replaceMeWithYourApiKey
+TMDB_API_Key = fbe796891ecb7a62451f2275d8476653
 
 # Youtube-dl variables
 youtubePlaylist = https://www.youtube.com/playlist?list=PLScC8g4bqD47c-qHlsfhGH3j6Bg7jzFy-
